<resources>
    <string name="app_name">Citizen Science</string>
    <string name="button_addSighting">Add Sighting</string>
    <string name="button_updateSighting">Update Sighting</string>
    <string name="button_updateImage">Update Image</string>
    <string name="button_addImage">Add Image</string>
    <string name="button_location">Set Location</string>
    <string name="select_sighting_image">Select Sighting Image</string>
    <string name="hint_sightingClassification">Classification</string>
    <string name="hint_sightingSpecies">Species</string>
    <string name="menu_addSighting">Add</string>
    <string name="menu_cancelSighting">Cancel</string>
    <string name="menu_deleteSighting">Delete</string>
    <string name="title_activity_map">Map</string>
    <string name="sighting_image_placeholder">Sighting Image</string>
    <string name="sighting_classification_placeholder">Sighting Classification</string>
    <string name="sighting_species_placeholder">Sighting Species</string>
    <string name="action_reported_sightings">Reported Sightings</string>
    <string name="action_reported_sightings_map">Reported Sightings Map</string>
    <string name="action_add_sighting">Add Sighting</string>
    <string name="action_search">Search</string>
    <string name="image_sighting">Sighting Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">Citizen Science</string>
    <string name="nav_header_subtitle">Biodiversity</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="sightingsNotFound">No Sightings Yet...\nClick + below to Add!</string>
    <string name="sightingError">Error : Unable to Create a Sighting...</string>
    <string name="sightingDetails">Sighting Details</string>
    <string name="classification">Classification :</string>
    <string name="species">Species :</string>
    <string name="messageDataLoading">Please Wait While The Data Loads...</string>

    <!--  START Firebase Resources -->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>



    <string name="selected_item">Selected item:</string>
</resources>