<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sightingFragment"
            android:icon="@drawable/ic_menu_sighting"
            android:title="@string/action_add_sighting" />
        <item
            android:id="@+id/sightingListFragment"
            android:icon="@drawable/ic_menu_sighting_list"
            android:title="@string/action_reported_sightings" />
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_send" />
        </menu>
    </item>
</menu>