<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="sightingvm"
            type="ie.wit.citizenscience.ui.detail.SightingDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.SightingDetailFragment">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/classification"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editClassification"
            android:layout_width="186dp"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:text="@={sightingvm.observableSighting.classification}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/species"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editSpecies"
            android:layout_width="186dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:text="@={sightingvm.observableSighting.species}"
            app:layout_constraintEnd_toEndOf="@+id/editClassification"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editClassification"
            app:layout_constraintTop_toBottomOf="@+id/editClassification" />

        <Button
            android:id="@+id/updateImage"
            android:layout_width="346dp"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorAccent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/button_updateImage"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sightingImage" />

        <ImageView
            android:id="@+id/sightingImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_sighting"
            android:src="@drawable/logo"
            app:layout_constraintTop_toBottomOf="@+id/editSpecies"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="1dp" />

        <Button
            android:id="@+id/editSightingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteSightingButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/deleteSightingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editSightingButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>